Added information for version 0.0.2

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "alinex-spawn",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
   "copyright": "Alexander Schilling 2014",
   "private": false,
@@ -27,7 +27,7 @@
     "lib": "./lib"
   },
   "dependencies": {
-    "alinex-util": "0.1.x",
+    "alinex-util": "^0.1.11",
     "chalk": "^0.5.1",
     "debug": "2.x"
   },
