--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "alinex-config": "0.4.x",
     "carrier": "0.1.x",
     "chalk": "1.x",
-    "debug": "2.x",
+    "debug": "2.x"
   },
   "devDependencies": {
     "alinex-error": "1.x",
